Bug #1992
sharemgr show -P [nfs|smb] doesn't work for shared datasets
Start date:
2012-01-17
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
sharemgr show -P <nfs|smb> does not output shared ZFS datasets that were shared by zfs set sharenfs|sharesmb.
It works for so-called "legacy" shares only (i.e. shared directories).
// patch is attached
Files
Updated by Rich Lowe about 9 years ago
Summarizing an IRC conversation:
With regular shares there's a two-level hierarchy, a group containing shares, with ZFS there's a 'zfs' group, containing subgroups, containing shares, following the dataset hierarchy. We assume, nevertheless, that any share has a protocol matching the shares in its parent (which I think the CLI enforces, if you're using the CLI).
Updated by Rich Lowe about 9 years ago
- Category changed from cmd - userland programs to lib - userland libraries
- Status changed from New to Resolved
- % Done changed from 0 to 100
- Tags deleted (
needs-triage)
Resolved in r13568 commit:a53b998f5e1b