1992 sharemgr show -P [nfs|smb] doesn't work for shared datasets Reviewed by: Gordon Ross <gordon.w.ross@gmail.com> Reviewed by: Andrew Stormont <Andrew.Stormont@nexenta.com> Reviewed by: Garrett D'Amore <garrett.damore@gmail.com> Approved by: Richard Lowe <richlowe@richlowe.net>